--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
+  margin-top: 2rem;
+  padding: 0 10%;
+  text-align: center;
+  width: 80%;
+  
+
+
+  background-color: #e0e0e0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +18,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+/* github test */
